--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>QR Code component</title>
   </head>
   <body>
-    <div>
-      <img src="images/image-qr-code.png" alt="qr-code" class="" />
+    <div class="card">
+      <img
+        src="images/image-qr-code.png"
+        alt="qr-code"
+        class="foto"
+        width="345"
+        height="345"
+      />
+
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
