--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet"/>
     <title>QR Code component</title>
   </head>
   <body>
-    <div class="card">
+    <main class="card">
       <img
         src="images/image-qr-code.png"
         alt="qr-code"
@@ -29,6 +30,6 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
-    </div>
+    </main>
   </body>
 </html>
